[tool.poetry]
name = "py-project"
version = "0.1.0"
description = ""
authors = ["ridwanray <alabarise@gmail.com>"]
readme = "README.md"
packages = [{include = "py_project"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
django = "4.0.6"
fastapi = "^0.97.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
